Add REACT_APP_DEV_MODE env variable to control dev mode

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ REACT_APP_WEBSOCKET_URL=http://localhost:3000
 
 # Twilio WhatsApp Business Number
 REACT_APP_TWILIO_WHATSAPP_NUMBER=+447366331247
+
+# Dev Mode - Set to 'true' for standalone testing without HubSpot
+# Set to 'false' or omit for production HubSpot integration
+REACT_APP_DEV_MODE=false
